tests/fixtures/errors/E0902_bundle_literal_unknown_field.mimz
// expect: E0902
bundle Hs { valid: bit }
module Top {
  out dst: Hs
  dst = { valid: 1, extra: 0 }
}
